[package]
name = "advent-of-code-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.5", features = ["derive"] }
either = "1.9.0"
itertools = "0.11.0"
regex = "1.9.5"
unicode-segmentation = "1.10.1"

[dev-dependencies]
test-case = "3.2.1"
