[package]
name = "advent-of-code-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
clap = { version = "4.4.5", features = ["derive"] }
derivative = "2.2.0"
fancy-regex = "0.13.0"
hex-literal = "0.4.1"
itertools = "0.11.0"
lazy_static = "1.4.0"
md-5 = "0.10.6"
ndarray = "0.15.6"
ndarray-linalg = { version = "0.16.0", features = ["openblas-static"] }
prime_factorization = "1.0.4"
regex = "1.9.5"
unicode-segmentation = "1.10.1"

[dev-dependencies]
test-case = "3.2.1"
